scene: Make sure components won't overflow on the sidebar
--HG--
branch : plugins

--- a/plugins/sparklinlabs/scene/editors/scene/index.styl
+++ b/plugins/sparklinlabs/scene/editors/scene/index.styl
@@ -27,7 +27,7 @@ body
     position absolute
 
 .inspector
-
+  overflow-y auto
   flex 1
   .transform
     padding 0.25em
